<?xml version="1.0" encoding="utf-8"?>
    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/inputContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/logoColor"
                android:textSize="24sp"
                android:text="@string/app_name"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="80dp"/>

            <android.support.v7.widget.AppCompatImageView
                android:layout_marginRight="32dp"
                android:layout_marginTop="64dp"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:padding="32dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_name"
                    android:textColor="@color/colorAccent"/>
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginBottom="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_email"
                    android:textColor="@color/colorAccent"/>
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtUserEmail"
                    android:layout_width="wrap_content"
                    android:textSize="20sp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabShowContactList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/logo_white"
            android:clickable="true"
            app:fabSize="normal"
            app:layout_anchor="@id/inputContainer"
            app:layout_anchorGravity="bottom|bottom|end"
            app:rippleColor="@android:color/white"/>

</android.support.design.widget.CoordinatorLayout>