<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EAEAEA"
    android:padding="8dp"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    >

    <com.list.contact.example.contactlist.contactlist.ContactListCardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/contactListCardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_list_card_min_height"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="131dp">
            
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imgContact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

                <RelativeLayout
                    android:id="@+id/viewGroupUserName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#9B9B9B"
                    android:visibility="invisible">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txtUserInitials"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@android:color/white"
                        android:textSize="70sp"
                        android:text="WS"/>
                </RelativeLayout>
            </FrameLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtContactName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lillian Scott"
                    android:textSize="24sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="#4A4A4A"
                    />
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtContactPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(11) 987-654-321"
                    android:textSize="13sp"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="#4A4A4A"
                    />
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnOpenTransfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="12dp"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textColor="@color/colorAccent"
                    android:text="@string/button_title_transfer"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:weightSum="20">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutTransferValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10">
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/txtTransferValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_value"
                        android:inputType="numberDecimal"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnConfirmTransfer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="12dp"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textColor="@color/colorAccent"
                    android:text="@string/button_title_send"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnCancelTransfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="12dp"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textColor="@color/colorAccent"
                    android:text="@string/button_title_cancel"/>

            </LinearLayout>
        </LinearLayout>
    </com.list.contact.example.contactlist.contactlist.ContactListCardView>

</LinearLayout>